--- a/style.css
+++ b/style.css
@@ -50,3 +50,7 @@ html, body { height: 100%; margin: 0; }
   display: inline-block;
 }
 
+.trainLabelPinned{
+  box-shadow: 0 8px 18px rgba(0,0,0,.35);
+}
+
